--- a/.drone.yml
+++ b/.drone.yml
@@ -1,4 +1,5 @@
-build:
-        image: java:8u91-jre
-        commands:
-                - ./gradlew hello
+pipeline:
+        gradle-sample:
+                image: openjdk
+                commands:
+                        - ./gradlew hello
